--- a/index.html
+++ b/index.html
@@ -4,9 +4,13 @@
 
 <head>
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-    <script src="main.js"></script>
+         <script src="main.js"></script>
 </head>
 <body>
+
+        <div id="map" style="width:300px;height:400px;left: 70%"></div>
+        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBWbz8SSS_X8ErgwW0lXzC_CMdGAJuWKA8&callback=myMap"></script>
+
 
 </body>
 </html>
