--- a/page2.html
+++ b/page2.html
@@ -1,29 +1,44 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
-    <link rel="stylesheet" href="page2.css">
-</head>
-<body>
-   <div class="main_container">
-       <div class="upper_area"></div>
-        <div id="movielist"></div>
-        <div id="googleMap"></div>
-       <div class="bottom_area"></div>
-   </div>
-   
-   
-   <script>
-    function myMap() {
-    var mapProp= {
-        center:new google.maps.LatLng(51.508742,-0.120850),
-        zoom:5,
-    };
-    var map=new google.maps.Map(document.getElementById("googleMap"),mapProp);
-    }
-    </script>
-    
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBWbz8SSS_X8ErgwW0lXzC_CMdGAJuWKA8&callback=myMap"></script>
-    
-</body>
+
+    <head>
+        <title>Page 2</title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <link rel="stylesheet" type="text/css" href="style.css">
+
+        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBWbz8SSS_X8ErgwW0lXzC_CMdGAJuWKA8&callback=myMap"></script>
+        <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+        <script src="main.js"></script>
+    </head>
+
+    <body>
+       <div class="main_container">
+           <div class="upper_area"></div>
+            <div id="movielist"></div>
+            <div id="googleMap"></div>
+
+           <div class="bottom_area">
+
+               <div class="go_back_button_container">
+                   <button id="go_back_button"><a href="index.html">back</a></button>
+               </div>
+
+           </div>
+       </div>
+
+       <script>
+        function myMap() {
+        var mapProp= {
+            center:new google.maps.LatLng(51.508742,-0.120850),
+            zoom:5,
+        };
+        var map=new google.maps.Map(document.getElementById("googleMap"),mapProp);
+        }
+        </script>
+
+        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBWbz8SSS_X8ErgwW0lXzC_CMdGAJuWKA8&callback=myMap"></script>
+
+    </body>
 </html>
