--- a/page2.html
+++ b/page2.html
@@ -1,29 +1,52 @@
 <!DOCTYPE html>
 <html>
+
 <head>
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="main.js"></script>
     <link rel="stylesheet" href="page2.css">
+    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+
 </head>
+
+
 <body>
-   <div class="main_container">
-       <div class="upper_area"></div>
-        <div id="movielist"></div>
-        <div id="googleMap"></div>
-       <div class="bottom_area"></div>
-   </div>
-   
-   
-   <script>
-    function myMap() {
-    var mapProp= {
-        center:new google.maps.LatLng(51.508742,-0.120850),
-        zoom:5,
-    };
-    var map=new google.maps.Map(document.getElementById("googleMap"),mapProp);
-    }
-    </script>
-    
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBWbz8SSS_X8ErgwW0lXzC_CMdGAJuWKA8&callback=myMap"></script>
-    
+    <div class="main_container">
+        <!--BEGINNING OF THE UPPER AREA-->
+        <div class="upper_area">
+            <div id="movielist">
+
+            </div>
+
+            <div class="modal fade" id="trailerModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+                <div class="modal-dialog modal-dialog-centered" role="document">
+                    <div class="modal-content">
+                        <div class="modal-body">
+                            <!--START OF MODAL BODY-->
+                            <h1>Trailer</h1>
+                            <iframe width="460" height="385" id="videoTrailer" src="">
+                            </iframe>
+                        </div>
+                        <!--END OF MODAL BODY-->
+                        <div class="modal-footer">
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div id="googleMap"></div>
+            <!--END OF THE UPPER AREA-->
+        </div>
+        <div class="bottom_area">
+
+        </div>
+
+    </div>
+
+        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBWbz8SSS_X8ErgwW0lXzC_CMdGAJuWKA8&callback=myMap"></script>
 </body>
+
 </html>
