made some changes

--- a/page2.html
+++ b/page2.html
@@ -13,7 +13,7 @@
 </head>
 
 
-<body
+<body>
     <div class="main_container">
         <!--BEGINNING OF THE UPPER AREA-->
         <div class="upper_area">
