--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 
     <head>
+        <title>Page 1</title>
         <meta charset="UTF-8">
         <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <link rel="stylesheet" type="text/css" href="style.css">
-        <title>Page 1</title>
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
         <script src="main.js"></script>
     </head>
@@ -18,7 +18,7 @@
             <div class="header_container">
 
                 <div class="header">
-                    <p class="header_text">Food and Film</p>
+                    <p class="header_text">food and film</p>
                 </div>
 
             </div>
@@ -26,8 +26,8 @@
             <div class="outer_search_container">
 
                 <div class="inner_search_container">
-                        <input id="search_field" type="text" placeholder="CITY">
-                        <button id="search_button" type="button">GO</button>
+                        <input id="search_field" type="text" placeholder="city">
+                        <button id="search_button" type="button">go</button>
                 </div>
 
             </div>
