created new skeleton

--- a/page2.html
+++ b/page2.html
@@ -8,8 +8,6 @@
     <script src="main.js"></script>
     <link rel="stylesheet" href="page2.css">
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-
-
 </head>
 <body>
     <div class="main_container">
@@ -51,8 +49,7 @@
     </div>
 
 
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBWbz8SSS_X8ErgwW0lXzC_CMdGAJuWKA8&libraries=places&callback=initAutocomplete"
-        async defer></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBWbz8SSS_X8ErgwW0lXzC_CMdGAJuWKA8&libraries=places&callback=initAutocomplete"async defer></script>
 </body>
 
 </html>
