--- a/restructured.html
+++ b/restructured.html
@@ -8,6 +8,7 @@
     <script src="restructured.js"></script>
     <link rel="stylesheet" href="restructured.css">
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+
     <title>Flix And Food Finder</title>
 </head>
 <body>
@@ -15,7 +16,25 @@
         <div class="topHalf">
             <div>Search!</div>
             <input id="pac-input" class="controls" type="text" placeholder="Enter a city">
-        </div>
+            <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">go</button>
+            <!-- Modal -->
+            <div class="modal fade" id="myModal" role="dialog">
+                <div class="modal-dialog" id="modal-dialog-id">
+
+                    <!-- Modal content-->
+                    <div class="modal-content" id="modal-content-id">
+                        <div class="modal-header">
+                            <button type="button" class="close" data-dismiss="modal">&times;</button>
+                            <h4 class="modal-title">Modal Header</h4>
+                        </div>
+                        <div class="modal-body">
+
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+
         <div class="bottomHalf">
             <div id="map">
 
