--- a/page2.html
+++ b/page2.html
@@ -21,6 +21,23 @@
 
             <div id="movielist">
 
+            
+
+            <!--carousel-->
+            <div id="posterCarousel" class="carousel slide" data-ride="carousel">
+                <div class="carousel-inner">
+                    
+                </div>
+
+                  <!-- Carousel controls -->
+                <a class="carousel-control left" href="#posterCarousel" data-slide="prev">
+                    <span class="glyphicon glyphicon-chevron-left"></span>
+                </a>
+                <a class="carousel-control right" href="#posterCarousel" data-slide="next">
+                <span class="glyphicon glyphicon-chevron-right"></span>
+                </a>
+
+            </div>
             </div>
 
             <div class="modal fade" id="trailerModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
