--- a/restructured.html
+++ b/restructured.html
@@ -15,6 +15,8 @@
         <div class="topHalf">
             <div>Search!</div>
             <input id="pac-input" class="controls" type="text" placeholder="Enter a city">
+            <!-- <input id="searchBar" type="text" placeholder="Enter a city">  -->
+            <button>Enter</button>
         </div>
         <div class="bottomHalf">
             <div id="map">
@@ -23,8 +25,11 @@
         </div>
     </div>
 
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBWbz8SSS_X8ErgwW0lXzC_CMdGAJuWKA8&libraries=places&callback=initAutocomplete"
-    async defer></script>
+<!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBWbz8SSS_X8ErgwW0lXzC_CMdGAJuWKA8&libraries=places&callback=initAutocomplete"
+AIzaSyBOJQGpTAzQlVrPskKQqO853B55Nog0kow
+    async defer></script> -->
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBOJQGpTAzQlVrPskKQqO853B55Nog0kow&libraries=places&callback=initAutocomplete"
+     async defer></script>
 </body>
 
 </html>
