--- a/restructured.html
+++ b/restructured.html
@@ -23,7 +23,7 @@
             <div class="modal fade" id="myModal" role="dialog">
                 <div class="modal-dialog" id="modal-dialog-id">
 
-                    <!-- Modal content-->
+                    <!-- Modal Content-->
                     <div class="modal-content" id="modal-content-id">
                         <div class="modal-header">
                             <button type="button" class="close" data-dismiss="modal">&times;</button>
@@ -31,13 +31,13 @@
                         </div>
                         <div class="modal-body">
 
-                            <!--carousel-->
+                            <!--Movie Carousel-->
                             <div id="posterCarousel" class="carousel slide" data-ride="carousel">
                                 <div class="carousel-inner">
 
                                 </div>
 
-                                <!-- Carousel controls -->
+                                <!-- Carousel Controls -->
                                 <a class="carousel-control left" href="#posterCarousel" data-slide="prev">
                                     <span class="glyphicon glyphicon-chevron-left"></span>
                                 </a>
