modal not workin

--- a/restructured.html
+++ b/restructured.html
@@ -19,7 +19,7 @@
             <!-- <input id="searchBar" type="text" placeholder="Enter a city">  -->
             <button>Enter</button>
         </div>
-            <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">go</button>
+            <!-- <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">go</button> -->
 
             <!-- Modal -->
             <div class="modal fade" id="myModal" role="dialog">
@@ -29,12 +29,12 @@
                     <div class="modal-content" id="modal-content-id">
                         <div class="modal-header">
                             <button type="button" class="close" data-dismiss="modal">&times;</button>
-                            <h4 class="modal-title">Modal Header</h4>
+                            <h4 class="modal-title"></h4>
                         </div>
                         <div class="modal-body">
 
                             <!--carousel1-->
-                            <div id="posterCarousel" class="carousel slide" data-ride="carousel">
+                            <div id="posterCarousel" class="carousel slide" data-ride="carousel" data-interval='false'>
                                 <div class="carousel-inner movie-library">
 
                                 </div>
@@ -47,13 +47,7 @@
                                     <span class="glyphicon glyphicon-chevron-right"></span>
                                 </a>
                             </div>
-                                <!-- move trailer model , this is where we dropped it -->\
-
-
-
-
-
-
+                                <!-- move trailer model , this is where we dropped it -->
 
                                 <div class="modal fade" id="trailerModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
                                         <div class="modal-dialog modal-dialog-centered" role="document">
@@ -71,7 +65,6 @@
                                             </div>
                                         </div>
                                     </div>
-
 
                             <!--carousel2-->
                             <div id="foodCarousel" class="carousel slide" data-ride="carousel">
