added some styling

--- a/restructured.html
+++ b/restructured.html
@@ -30,12 +30,13 @@
                     <div class="modal-content" id="modal-content-id">
                         <div class="modal-header">
                             <button type="button" class="close" data-dismiss="modal">&times;</button>
-                            <h4 class="modal-title">Modal Header</h4>
+                            <div></div>
+
                         </div>
                         <div class="modal-body">
 
                             <!--carousel1-->
-                            <div id="posterCarousel" class="carousel slide" data-ride="carousel">
+                            <div id="posterCarousel" class="carousel slide" data-ride="carousel" data-interval="false">
                                 <div class="carousel-inner movie-library">
 
                                 </div>
@@ -50,7 +51,7 @@
                             </div>
 
                             <!--carousel2-->
-                            <div id="foodCarousel" class="carousel slide" data-ride="carousel">
+                            <div id="foodCarousel" class="carousel slide" data-ride="carousel" data-interval="false">
                                     <div class="carousel-inner food-library">
         
                                     </div>
@@ -68,11 +69,6 @@
 
                 </div>
             </div>
-
-        <!-- <div class="bottomHalf">
-            <div id="map">
-
-            </div> -->
         </div>
     </div>
   
