fixed some bugs

--- a/restructured.html
+++ b/restructured.html
@@ -34,7 +34,7 @@
                         <div class="modal-body">
 
                             <!--carousel1-->
-                            <div id="posterCarousel" class="carousel slide" data-ride="carousel" data-interval='false'>
+                            <div id="posterCarousel" class="carousel slide" data-ride="carousel">
                                 <div class="carousel-inner movie-library">
 
                                 </div>
